# final_project

./: README.md  pyproject.toml
.virtual_documents/Notebooks/: final_project_data.ipynb
Data/Raw/: Project.ipynb  report_ventas_ago24.csv  report_ventas_jul24.csv  report_ventas_jun24.csv  report_ventas_nov24.csv  report_ventas_oct24.csv  report_ventas_sept24.csv
Notebooks/: data_preliminary_review.ipynb  final_project_data.ipynb  restaurants_forecast.ipynb
