[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ace-tools>=0.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.3",
    "mlxtend>=0.23.3",
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "prophet>=1.1.6",
    "seaborn>=0.13.2",
]
